refactoring: - Implementado OrderInterface e SortInterface para reaproveitamento de ordenação por status e data de criação - Implementado operações de consulta no GetKitchenOrderUseCase por lista de status - Refatoração das operação de Lista de Status de Payment e CustomerOrder